# battsim

./: LICENSE  README.md  pyproject.toml
docs/adr/: ADR-001.md
src/battsim/: battery.py
tests/: test_simulation.py
